updated projects to three slides shows, fixed containers to same size, changed slides to show on mobile app to one, fixed header for mobile app

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -66,7 +66,7 @@ nav {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;  /* Allows items to wrap if needed */
-  gap: 15px;        /* Adds some space between the items */
+  gap: 60px;        /* Adds some space between the items */
 }
 
 .header nav ul li {
@@ -101,6 +101,7 @@ body {
   .header nav ul {
     flex-direction: row;  /* Ensure the items stay in a row */
     justify-content: center;  /* Center the nav items */
+    gap: 20px;
   }
 
   .header nav ul li a {
