--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,5 @@
 .projects {
-  padding: 40px;
+  padding: 50px;
   background-color: hsla(31, 23%, 37%, 0.187);
   overflow: hidden;
 }
@@ -9,17 +9,18 @@
   font-size: 2rem;
   margin-bottom: 30px;
   font-family: inherit;
+  margin-top: 0;
 }
 
 .project-item {
   text-align: center;
-  padding: 40px;
+  padding: 20px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between; /* Space elements evenly */
   align-items: center;
   max-height: 600px;
   height: auto;
@@ -29,8 +30,8 @@
 }
 
 .project-media {
-  max-width: 350px;
-  height: 350px;
+  max-width: 450px;
+  height: 400px;
   max-height: 600px;
   object-fit: cover;
   object-position: center;
@@ -74,7 +75,7 @@
 }
 
 .slick-dots {
-  bottom: -30px;
+  bottom: -40px;
 }
 
 .slick-dots li button:before {
@@ -91,6 +92,7 @@
 .slick-slide {
   padding: 0 10px;
   box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
 /* Mobile responsiveness */
@@ -101,16 +103,17 @@
 
   .slick-slider {
     margin: 0 auto; /* Center the slider */
+    margin-bottom: 10px;
   }
 
   .project-item {
-    padding: 20px;
+    width: 100%;
+    min-height: 450px;
   }
+
 
   .project-media {
     max-width: 100%;
-    height: auto;
-    margin: 0 auto;
   }
 
   .project-item h3 {
@@ -133,6 +136,11 @@
 
 /* Extra small screens (phone) */
 @media (max-width: 480px) {
+  
+  .project-item {
+    min-height: 400px;
+  }
+
   .projects h2 {
     font-size: 1.5rem;
   }
